k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: twitch-video-analytics-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
    - host: twitch-video-analytics.internal
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: twitch-video-analytics-svc
              port:
                number: 8080
